--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,20 +26,23 @@
         <!--            <button class="btn btn-danger" onclick="writePost()">작성하기</button>-->
         <img src="/img/send.png" alt="" onclick="writePost()">
     </div>
+    
     <div id="cards-box" class="area-read">
+        <% if (memos.length !==0) { %>
+            <% memos.forEach(memo=> { %>
         <div class="card">
             <!-- date/username 영역 -->
             <div class="metadata">
                 <div class="date">
-                    October 10, 2020
+                    <%= memo.createdAt %>
                 </div>
                 <div class="username">
-                    anonymous
+                    <%= memo.userId %>
                 </div>
             </div>
             <!-- contents 조회/수정 영역-->
             <div class="contents">
-
+                <%= memo.content %>
             </div>
             <!-- 버튼 영역-->
             <div class="footer">
@@ -48,6 +51,8 @@
                 <img id="1-submit" class="icon-end-edit" src="/img/edit.png" alt="" onclick="submitEdit('1')">
             </div>
         </div>
+        <% }); %>
+        <% }; %>
     </div>
 </div>
 </body>
