변수명 변경 및 타임스탬프 데이터 처리

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,7 +13,7 @@ body {
     margin: 10px auto;
 }
 
-#contents {
+#content {
     width: 538px;
 }
 
@@ -134,17 +134,17 @@ textarea.field::placeholder {
     margin-left: 20px;
 }
 
-.contents {
+.content {
     padding: 0px 23px;
     word-wrap: break-word;
     word-break: break-all;
 }
 
-.contents div.edit {
+.content div.edit {
     display: none;
 }
 
-.contents textarea.te-edit {
+.content textarea.te-edit {
     border-right: none;
     border-top: none;
     border-left: none;
