--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,6 @@
 </head>
 
 <body>
-    <div class="background-header">
-
-    </div>
-    <div class="background-body">
-
-    </div>
     <div class="wrap">
         <div class="header">
             <h2>Memo</h2>
@@ -18,8 +12,7 @@
             </p>
         </div>
         <div class="area-write">
-            <textarea class="field" placeholder="공유하고 싶은 소식을 입력해주세요" name="content" id="content" cols="30"
-                rows="10"></textarea>
+            <textarea class="field" placeholder="무슨 일이 일어나고 있나요?" name="content" id="content" cols="30" rows="10"></textarea>
             <img src="/img/send.png" alt="" onclick="writePost()">
         </div>
 
