로그인/회원가입 토대 구현

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -18,3 +18,11 @@
     color: #52C1FF;
     margin-bottom: 20px;
 }
+
+form > span > span {
+    color: #f86550;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    font-size: 0.8rem;
+}
