--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -8,6 +8,12 @@ a {
     color: #999999;
 }
 
+form > span {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
 form > input{
     width: 100%;
     height: 48px;
@@ -17,6 +23,17 @@ form > input{
     border-radius: 6px;
     background-color: #F8F8F8;
 }
+
+form > span > input{
+    width: 100%;
+    height: 48px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    margin-bottom: 16px;
+    border-radius: 6px;
+    background-color: #F8F8F8;
+}
+
 form > input::placeholder{
     color: #D2D2D2;
 }
