--- a/views/account.ejs
+++ b/views/account.ejs
@@ -4,19 +4,36 @@
 
 <div class="account-wrapper">
     <h2>회원가입</h2>
-    <form action="/submit_signup" method="POST">
+    <form action="/submit-account" method="POST" id="form">
         <label for="email">이메일</label>
-        <input type="email" id="email" name="email" placeholder="Email" required>
+        <span>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <span class="error" id="email_error"></span>
+        </span>
 
         <label for="name">이름</label>
-        <input type="text" id="name" name="name" required>
+        <span>
+            <input type="text" id="name" name="name" required>
+        </span>
 
         <label for="password">비밀번호</label>
-        <input type="password" id="password" name="password" required>
+        <span>
+            <input type="password" id="password" name="password" required>
+            <span class="error" id="password_error"></span>
+        </span>
 
         <label for="confirm_password">비밀번호 재확인</label>
-        <input type="password" id="confirm_password" name="confirm_password" required>
+        <span>
+            <input type="password" id="confirm_password" name="confirm_password" required>
+            <span class="error" id="password_confirm_error"></span>
+        </span>
 
         <input type="submit" value="가입하기">
     </form>
 </div>
+
+<!-- 폼 정보 담기 위해 밑에 작성 -->
+
+<head>
+    <script src="/js/accout.js"></script>
+</head>
