--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,9 @@
 </head>
 <div class="login-wrapper">
     <h2>Login</h2>
-    <form method="post" action="서버의url" id="login-form">
-        <input type="text" name="userName" placeholder="Email">
-        <input type="password" name="userPassword" placeholder="Password">
+    <form method="post" action="/submit-login" id="login-form">
+        <input type="text" id="email" name="email" placeholder="Email">
+        <input type="password" id="password" name="password" placeholder="Password">
         <div>
             <label for="remember-check">
                 <input type="checkbox" id="remember-check">아이디 저장하기
