회원가입 쪽 css 수정

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -19,10 +19,11 @@
     margin-bottom: 20px;
 }
 
-form > span > span {
+.error {
     color: #f86550;
     position: absolute;
-    right: 15px;
-    top: 15px;
-    font-size: 0.8rem;
+    left: 2px;
+    top: 49px;
+    font-size: 0.7rem;
+    display: none;
 }
