이메일 중복 처리 및 회원가입 이벤트 비동기적으로 처리

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -8,6 +8,7 @@
         <label for="email">이메일</label>
         <span>
             <input type="text" id="email" name="email" placeholder="이메일">
+            <button type="button" class="check_email" id="check_email">중복확인</button>
             <span class="error" id="email_error"></span>
         </span>
 
