--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1,9 +1,9 @@
-.container{
+.container {
     display: flex;
     justify-content: center;
 }
 
-.account-wrapper{
+.account-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,10 +13,25 @@
     box-sizing: border-box;
 }
 
-.account-wrapper > h2{
+.account-wrapper>h2 {
     font-size: 24px;
     color: #52C1FF;
     margin-bottom: 20px;
+}
+
+.check_email {
+    overflow: hidden;
+    position: absolute;
+    font-size: 0.7rem;
+    right: 8px;
+    top: 15px;
+    border-width: 0;
+    border-radius: 4px;
+    background: none;
+}
+
+.check_email:hover {
+    background: #F2F2F2;
 }
 
 .error {
