--- a/views/account.ejs
+++ b/views/account.ejs
@@ -8,8 +8,10 @@
         <label for="email">이메일</label>
         <span>
             <input type="text" id="email" name="email" placeholder="이메일">
-            <button type="button" class="check_email" id="check_email">중복확인</button>
+            <button type="button" class="email_btn" id="email_btn">인증번호 보내기</button>
             <span class="error" id="email_error"></span>
+            <input type="text" id="check_email" name="check_email" placeholder="인증번호를 입력하세요">
+            <button type="button" class="check_email_btn" id="check_email_btn">인증번호 확인</button>
         </span>
 
         <label for="name">이름</label>
