--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -34,6 +34,10 @@ form > span > input{
     background-color: #F8F8F8;
 }
 
+form > span > input[disabled]{
+    background-color: #e7e7e7;
+}
+
 form > input::placeholder{
     color: #D2D2D2;
 }
