--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <div class="header">
             <h2>Memo</h2>
             <p>
-                공유하고 싶은 소식을 입력해주세요.
+                저장하고 싶은 내용을 입력해주세요.
             </p>
         </div>
         <div class="area-write">
@@ -26,9 +26,6 @@
                                 <script>
                                     document.write(formatTimeStamp('<%= memo.createdAt.seconds %>'));
                                 </script>
-                            </div>
-                            <div class="username">
-                                <%= memo.userId %>
                             </div>
                         </div>
                         <!-- content 조회/수정 영역-->
