--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,9 @@
     <%- include('header') %>
 
     <div class="container">
+        <% if (user) { %>
+            <%- include('tap') %>
+        <% } %>
         <%- body %>
     </div>
 </body>
