--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,9 @@
 <head>
     <style>
+        .navbar {
+            position: sticky;
+            top: 0;
+        }
         .container-fluid {
             display: flex;
         }
