--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,6 +3,7 @@
         .navbar {
             position: sticky;
             top: 0;
+            z-index: 1;
         }
         .container-fluid {
             display: flex;
