--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,13 @@
             </p>
         </div>
         <div class="area-write">
-            <textarea class="field" placeholder="무슨 일이 일어나고 있나요?" name="content" id="content" cols="30" rows="10"></textarea>
-            <img src="/img/send.png" alt="" onclick="writePost()">
+            <textarea class="field" placeholder="무슨 일이 일어나고 있나요?" name="content" id="content" cols="30" rows="1"></textarea>
+            <div class="container">
+                <div class="row row-cols-4" id="imageContainer"></div>
+            </div>
+            <i class="xi-image xi-x" onclick="addImage()"></i>
+            <i class="xi-paperclip xi-x"></i>
+            <img class= "send-img" src="/img/send.png" alt="" onclick="writePost()">
         </div>
 
         <div id="cards-box" class="area-read">
@@ -33,6 +38,17 @@
                             <div id="<%=memo.id %>-content" class="text">
                                 <%= memo.content %>
                             </div>
+
+                            <div class="row row-cols-4" id="imageContainer">
+                                    <% if (memo.files.length !==0) { %>
+                                        <% memo.files.forEach(file => { %>
+                                            <div class="col">
+                                                <img src="<%=file.downloadURL %>">
+                                            </div>
+                                        <% }); %>
+                                    <% }; %>
+                            </div>
+
                             <div id="<%=memo.id %>-editarea" class="edit">
                                 <textarea id="<%=memo.id %>-textarea" class="te-edit" name="" id="" cols="30"
                                     rows="5"></textarea>
