북마크 화면 로딩 추가

--- a/views/bookmark.ejs
+++ b/views/bookmark.ejs
@@ -23,22 +23,40 @@
                             <div id="<%=memo.id %>-content" class="text">
                                 <%= memo.content %>
                             </div>
+
                             <div id="<%=memo.id %>-editarea" class="edit">
                                 <textarea id="<%=memo.id %>-textarea" class="te-edit" name="" id="" cols="30"
-                                    rows="5"></textarea>
+                                    rows="1"></textarea>
                             </div>
-                            <div class="row row-cols-4" id="<%=memo.id %>-imageContainer">
-                                <% if (memo.files.length !==0) { %>
+                            <% if (memo.files.length !== 0) { %>
+                                <div class="row row-cols-4" id="<%= memo.id %>-imageContainer">
                                     <% memo.files.forEach(file => { %>
-                                        <div class="col input-col">
-                                            <img src="<%=file.downloadURL %>">
-                                        </div>
+                                        <% if (file.type.startsWith('image/')) { %>
+                                            <div class="col input-col file-view">
+                                                <img src="<%= file.downloadURL %>" alt="<%= file.fileName %>">
+                                            </div>
+                                        <% } %>
                                     <% }); %>
-                                <% }; %>
-                            </div>
+                                </div>
+                            
+                                <div id="<%= memo.id %>-fileContainer">
+                                    <% memo.files.forEach(file => { %>
+                                        <% if (!file.type.startsWith('image/')) { %>
+                                            <a href="<%= file.downloadURL %>" download>
+                                                <div class="col input-col file-col file-view">
+                                                    <i class="xi-file-download-o xi-2x"></i>
+                                                    <span class="file-name"><%= file.fileName %></span>
+                                                </div>
+                                            </a>
+                                        <% } %>
+                                    <% }); %>
+                                </div>
+                            <% } %>
                         </div>
                         <!-- 버튼 영역-->
                         <div class="footer">
+                            <i id="<%= memo.id %>-image" class="xi-image xi-x" onclick="addImage('<%=memo.id %>-imageContainer')"></i>
+                            <i id="<%= memo.id %>-file" class="xi-paperclip xi-x"></i>
                             <i id="<%= memo.id %>-bookmark" class="xi-star-o xi-x" onclick="bookmark('<%= memo.id %>')" 
                                 style="display: <%= memo.bookmark ? 'none' : 'block' %>;"></i>
                             <i id = "<%=memo.id %>-unbookmark" class="xi-star xi-x" onclick="unBookmark(('<%=memo.id %>'))"
