--- a/views/header.ejs
+++ b/views/header.ejs
@@ -53,8 +53,8 @@
 
         <% if (user) { %>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search">
+                <form class="d-flex" action="/search" method="GET">
+                    <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search" name="q">
                 </form>
             </div>
         <% }; %>
