--- a/views/tap.ejs
+++ b/views/tap.ejs
@@ -37,10 +37,9 @@
 </head>
 
 <nav class="nav flex-column">
-    <a class="link active" aria-current="page" href="/">홈</a>
-    <a class="link" href="/bookmark">중요함 (별)</a>
-    <a class="link" href="#">파일 목록</a>
-    <a class="link" href="#">설정</a>
+    <a class="link active" aria-current="page" href="/"><i class="xi-home xi-x"></i> 홈</a>
+    <a class="link" href="/bookmark"><i class="xi-star xi-x"></i> 중요함</a>
+    <a class="link" href="#"><i class="xi-cog xi-x"></i> 설정</a>
 </nav>
 
 <head>
