비밀번호 변경 구현

--- a/views/tap.ejs
+++ b/views/tap.ejs
@@ -39,7 +39,7 @@
 <nav class="nav flex-column">
     <a class="link active" aria-current="page" href="/"><i class="xi-home xi-x"></i> 홈</a>
     <a class="link" href="/bookmark"><i class="xi-star xi-x"></i> 중요함</a>
-    <a class="link" href="#"><i class="xi-cog xi-x"></i> 설정</a>
+    <a class="link" href="/setting"><i class="xi-cog xi-x"></i> 설정</a>
 </nav>
 
 <head>
