--- a/views/tap.ejs
+++ b/views/tap.ejs
@@ -10,6 +10,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            z-index: 2;
         }
 
         .link {
