아이디 저장하기 체크하면 앞으로도 쭉 자동 체크되도록 설정

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="/css/login.css">
+    <script src="/js/login.js"></script>
 </head>
 <div class="login-wrapper">
     <h2>Login</h2>
